# sgx-playground

./: .gitignore  README.md  build.sh  datasealing.out  devenv.sh  hello.out  run.sh
include/sgx_playground/datasealing/: common.h
src/: CMakeLists.txt
src/datasealing/: CMakeLists.txt  common.c
src/enclave/: CMakeLists.txt  datasealing.edl  hello.edl
src/enclave/datasealing/: CMakeLists.txt  dispatcher.c  dispatcher.h
src/enclave/datasealing/a_v1/: CMakeLists.txt  main.c
src/enclave/datasealing/a_v2/: CMakeLists.txt  main.c  sgx.conf
src/enclave/datasealing/b/: CMakeLists.txt  main.c  sgx.conf
src/enclave/hello/: CMakeLists.txt  main.c  sgx.conf
src/host/: CMakeLists.txt  datasealing.c  hello.c
